--- a/brave/index.html
+++ b/brave/index.html
@@ -881,11 +881,11 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 </tr>
 <tr>
 <td><strong>Latest update deployed in</strong></td>
-<td><a href="https://community.brave.com/t/release-channel-1-19-86/197535">v1.19.86</a></td>
+<td><a href="https://github.com/brave/brave-browser/releases/tag/v1.30.86">v1.30.86</a></td>
 </tr>
 <tr>
 <td><strong>Latest update includes</strong></td>
-<td><a href="https://github.com/brave/brave-browser/issues/13464">Strip referrer to <code>strict-origin-when-cross-origin</code> or stricter</a></td>
+<td>No longer block requests to filtered origins if the requests are same-site with the site the user is browsing.</td>
 </tr>
 <tr>
 <td><strong>User controls</strong></td>
@@ -912,6 +912,7 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <li><a href="https://raw.githubusercontent.com/brave/adblock-lists/master/brave-disconnect.txt">Brave&rsquo;s fork of Disconnect.me</a></li>
 </ul>
 <p>Brave matches each outgoing request from the web browser against these lists (using various methods for achieving <a href="https://brave.com/improved-ad-blocker-performance/">optimized performance</a>), and if a match is made, the request is <strong>blocked</strong>.</p>
+<p><strong>Note!</strong> If the resource that should be blocked is <strong>same-site</strong> to the site the user is browsing, the request will <strong>not</strong> be blocked. Thus if the user is browsing <code>www.domain.com</code> and the browser sends a request to <code>blocked-tracker.domain.com</code> (which <strong>is</strong> in Brave&rsquo;s filter lists), the request will not be blocked.</p>
 
 <div class="notices note" ><p><strong>Example</strong>: The user visits a site that tries to load the Google Analytics JavaScript library from <code>https://www.google-analytics.com/analytics.js</code>. This URL (and the entire domain, in fact), is listed in the <a href="https://easylist.to/easylist/easyprivacy.txt">EasyPrivacy list</a>. Thus Brave blocks the request, preventing the browser from downloading the library and executing the Google Analytics tracking code in the web browser.</p>
 </div>
