--- a/firefox/index.html
+++ b/firefox/index.html
@@ -941,6 +941,11 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <p>No protections against CNAME cloaking.</p>
 <h2 id="referrer">Referrer</h2>
 <p>The default referrer policy is <code>strict-origin-when-cross-origin</code>.</p>
+<p>If the referring URL has a tracking parameter (e.g. <code>fbclid</code>), the <code>document.referrer</code> string is truncated to eTLD+1.</p>
+
+<div class="notices note" ><p><strong>Example</strong>: If the user browses from <code>https://www.my.domain/purchase-page?fbclid=12345</code> to <code>https://www.my.domain/home-page/</code>, the <code>document.referrer</code> string will show just <code>https://my.domain/</code>.</p>
+</div>
+
 <h2 id="other">Other</h2>
 <p>If the domain is in the Fingerprinting category of Disconnect.me <strong>and</strong> in one of the tracking categories (Advertising, Analytics, or Social), all third-party <strong>requests</strong> to the domain are blocked.</p>
 <p>On macOS Firefox, the version number in the User Agent string is frozen to <code>10.15</code> to fix compatibility issues with upgrading to macOS version 11+ (Big Sur). This has obvious privacy implications as well, as the platform version is no longer useful for fingerprinting purposes.</p>
