--- a/index.html
+++ b/index.html
@@ -801,8 +801,8 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <div class="notices note" ><p>Changes added in the <strong>latest release</strong> of each browser are indicated with <span style="background: yellow;">yellow highlight</span>. You can <strong>click</strong> the <a class="fa fa-info-circle" rel="footnote"></a> icon to be redirected to the respective section in each browser&rsquo;s own &ldquo;Current Status&rdquo; page.</p>
 </div>
 
-<p><strong>Last updated</strong>: 3 Jan 2022<br>
-Safari uses <code>strict-origin-when-cross-origin</code> default Referrer Policy.</p>
+<p><strong>Last updated</strong>: 5 Jan 2022<br>
+Updated Brave referrer features.</p>
 <p><a title="Suggest an edit" href="https://github.com/cookie-status/cookie-status-dev/issues/new?labels=content&title=%5BContent%20issue%5D%20Current%20Status" target="_blank"><i class="fa fa-edit"></i> Suggest an edit</a></p>
 <p><a href="#" id="fullscreen">Toggle full screen</a></p>
 <div id="cs" style="overflow-x:auto;">
@@ -911,7 +911,7 @@ Safari uses <code>strict-origin-when-cross-origin</code> default Referrer Policy
 </tr>
 <tr>
 <td align="right"><strong>Referrer</strong></td>
-<td><p><a href="/brave/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Cross-site referrers are spoofed (set to the referred-to rather than the referred-from origin) in non-navigational HTTP requests.</p><p><a href="/brave/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <code>strict-origin-when-cross-origin</code> or stricter referrer policy in cross-site navigational requests.</p><p><a href="/brave/#referrer" rel="footnote" class="fa fa-info-circle"></a> Same-site navigation preserves the referrer.</p></td>
+<td><p><a href="/brave/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <span class="new"> <code>strict-origin-when-cross-origin</code> or stricter referrer policy in subresource requests and cross-site navigational requests.</span></p><p><a href="/brave/#referrer" rel="footnote" class="fa fa-info-circle"></a> Same-site navigation preserves the referrer.</p></td>
 <td><a href="/chrome/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Default browser policy (<code>strict-origin-when-cross-origin</code>)</td>
 <td><a href="/edge/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Default browser policy (<code>strict-origin-when-cross-origin</code>)</td>
 <td><p><a href="/firefox/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Default browser policy (<code>strict-origin-when-cross-origin</code>)</p><p><a href="/firefox/#referrer" rel="footnote" class="fa fa-info-circle"></a> <span class="new">If the referring URL has a tracking parameter (e.g. <code>fbclid</code>), <code>document.referrer</code> string is truncated to eTLD+1.</span></p></td>
