Update Chrome 400 days cookie lifetime

--- a/chrome/index.html
+++ b/chrome/index.html
@@ -871,9 +871,9 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <h2 id="classification-of-known-trackers">Classification of &ldquo;known trackers&rdquo;</h2>
 <p>Chrome does not classify classify trackers or domains for the purposes of tracking protection.</p>
 <h2 id="third-party-cookies">Third-party cookies</h2>
-<p>Chrome does not restrict the use of third-party cookies.</p>
+<p>Chrome restricts the maximum lifetime of cookies to 400 days. Other than that, Chrome does not restrict the use of third-party cookies.</p>
 <h2 id="first-party-cookies">First-party cookies</h2>
-<p>Chrome does not restrict the use of first-party cookies.</p>
+<p>Chrome restricts the maximum lifetime of cookies to 400 days. Other than that, Chrome does not restrict the use of first-party cookies.</p>
 <h2 id="other-third-party-storage">Other third-party storage</h2>
 <p>Chrome does not restrict the use of other browser storage in third-party context.</p>
 <h2 id="other-first-party-storage">Other first-party storage</h2>
