--- a/index.html
+++ b/index.html
@@ -801,8 +801,8 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <div class="notices note" ><p>Changes added in the <strong>latest release</strong> of each browser are indicated with <span style="background: yellow;">yellow highlight</span>. You can <strong>click</strong> the <a class="fa fa-info-circle" rel="footnote"></a> icon to be redirected to the respective section in each browser&rsquo;s own &ldquo;Current Status&rdquo; page.</p>
 </div>
 
-<p><strong>Last updated</strong>: 29 Jun 2022<br>
-Updated Firefox&rsquo; Total Cookie Protection.</p>
+<p><strong>Last updated</strong>: 8 Sep 2022<br>
+Chrome sets maximum lifetime of cookies to 400 days.</p>
 <p><a title="Suggest an edit" href="https://github.com/cookie-status/cookie-status-dev/issues/new?labels=content&title=%5BContent%20issue%5D%20Current%20Status" target="_blank"><i class="fa fa-edit"></i> Suggest an edit</a></p>
 <p><a href="#" id="fullscreen">Toggle full screen</a></p>
 <div id="cs" style="overflow-x:auto;">
@@ -867,7 +867,7 @@ Updated Firefox&rsquo; Total Cookie Protection.</p>
 <tr>
 <td align="right"><strong>Cookies in 3rd party context</strong></td>
 <td><p><a href="/brave/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> Restrict access in subresource requests.</p><p><a href="/brave/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> Partitioned access in frame.</p><p><a href="/brave/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> Partitioned storage is cleared when no more first-party documents that use the partition are open, or when the browser is closed.</td>
-<td><a href="/chrome/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> No restrictions.</td>
+<td><a href="/chrome/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Cookies restricted to a maximum lifetime of 400 days.</span></td>
 <td><a href="/edge/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted for known trackers.</td>
 <td><p><a href="/firefox/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted for known trackers.</p><p><a href="/firefox/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Cookies are partitioned between the site and the third-party. Cookies are not shared across sites.</span></p></td>
 <td><p><a href="/safari/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> All access restricted, except with Storage Access API.</p></td>
@@ -876,7 +876,7 @@ Updated Firefox&rsquo; Total Cookie Protection.</p>
 <tr>
 <td align="right"><strong>Cookies in 1st party context</strong></td>
 <td><p><a href="/brave/#first-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> For cookies set with <code>document.cookie</code>, expiration set to 7 days.</p><p><a href="/brave/#first-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Otherwise maximum expiry set to 6 months.</p></td>
-<td><a href="/chrome/#first-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> No restrictions.</td>
+<td><a href="/chrome/#first-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Cookies restricted to a maximum lifetime of 400 days.</span></td>
 <td><a href="/edge/#first-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> No restrictions.</td>
 <td><a href="/firefox/#first-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> All storage is purged from known trackers daily, unless the user has interacted with the site in first-party context within the last 45 days.</td>
 <td><p><a href="/safari/#first-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> For cookies set with <code>document.cookie</code>, expiration set to 7 days.</p><p><a href="/safari/#first-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> For cookies set with <code>document.cookie</code>, expiration set to 24 hours on pages with URL decoration (query parameters or fragments) when referring domain is a known tracker.</p></td>
@@ -914,7 +914,7 @@ Updated Firefox&rsquo; Total Cookie Protection.</p>
 <td><p><a href="/brave/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <span class="new"> <code>strict-origin-when-cross-origin</code> or stricter referrer policy in subresource requests and cross-site navigational requests.</span></p><p><a href="/brave/#referrer" rel="footnote" class="fa fa-info-circle"></a> Same-site navigation preserves the referrer.</p></td>
 <td><a href="/chrome/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Default browser policy (<code>strict-origin-when-cross-origin</code>)</td>
 <td><a href="/edge/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Default browser policy (<code>strict-origin-when-cross-origin</code>)</td>
-<td><p><a href="/firefox/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Default browser policy (<code>strict-origin-when-cross-origin</code>)</p><p><a href="/firefox/#referrer" rel="footnote" class="fa fa-info-circle"></a> If the referring URL has a tracking parameter (e.g. <code>fbclid</code>), <code>document.referrer</code> string is truncated to eTLD+1.</p></td>
+<td><p><a href="/firefox/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Default browser policy (<code>strict-origin-when-cross-origin</code> or stricter)</span></p><p><a href="/firefox/#referrer" rel="footnote" class="fa fa-info-circle"></a> If the referring URL has a tracking parameter (e.g. <code>fbclid</code>), <code>document.referrer</code> string is truncated to eTLD+1.</p></td>
 <td><p><a href="/safari/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Downgrade cross-site <code>document.referrer</code> to origin.</p><p><a href="/safari/#referrer" rel="footnote" class="fa fa-info-circle"></a> Downgrade all cross-site request headers to origin.</p><p><a href="/safari/#referrer" rel="footnote"  class="fa fa-info-circle"></a> For referrers that are known trackers, where the referring page also has URL decoration (query parameters or fragments), <code>document.referrer</code> is downgraded to eTLD+1.</p><p><a href="/safari/#referrer" rel="footnote" class="fa fa-info-circle"></a><span class="new">Default browser policy (<code>strict-origin-when-cross-origin</code>)</span></p></td>
 <td><a href="/cliqz/#referrer" rel="footnote" class="fa fa-info-circle"></a> Strip all cross-origin referrers to origin.</td>
 </tr>
