Remove Cliqz from home page, make header sticky

--- a/introduction/tracking-protection/index.html
+++ b/introduction/tracking-protection/index.html
@@ -959,7 +959,7 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 
 <p><strong>First-party context</strong> means that the operation happens between domains within <strong>the same site</strong>, í.e. domains that share the <strong>eTLD+1</strong>. <strong>Third-party context</strong> means that the operation happens <strong>cross-site</strong>, i.e. between domains that do not share the <strong>eTLD+1</strong>.</p>
 <p>Here are some examples. Consider the user to be on the domain <strong><a href="https://www.cookiestatus.com">www.cookiestatus.com</a></strong>.</p>
-<div id="" style="overflow-x:auto;">
+<div id="">
   <table>
 <thead>
 <tr>
